# megaparsack-indentation

./: LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  devlog.md  flake.nix  ideas.md  makefile  open-questions.md  plan-rhombus.md  todo.md
adr/: 2025-06-21_token-indentation-resolution.md  README.md
devlog/: open-questions.md
megaparsack-indentation/: LICENSE-APACHE  LICENSE-MIT  README.md  info.rkt  main.rkt
megaparsack-indentation-shrubbery/: LICENSE-APACHE  LICENSE-MIT  info.rkt  lex.rkt  main.rkt  token.rkt  utils.rkt  variant.rkt
megaparsack-indentation-shrubbery-test/: .gitattributes  benchmark.rkt  corpus.rkt  info.rkt  load_test_gen.rkt  main.rkt  rand_sexp_test.rkt  sexp_generator.rkt  tut.rkt
megaparsack-indentation-shrubbery-test/corpus/: .gitignore  main.py  manifest.jsonl  pyproject.toml
megaparsack-indentation-shrubbery-test/fail_corpus/: fail3.rhm
megaparsack-indentation-shrubbery-test/sample_rangen/: 1762138581_random.rhm.sexp  1762138583_random.rhm  1762138583_random.rhm.sexp  1762138584_random.rhm  1762138587_random.rhm.sexp  1762138590_random.rhm  176213930213_random.rhm.sexp  176213930215_random.rhm.sexp  176213930216_random.rhm.sexp  176213930217_random.rhm  176213930219_random.rhm  (+59 more)
megparsack-indentation-shrubbery-test/: README.md  main.rkt  plan.md  utils.rkt
scripts/: new-adr.sh
test/: .gitignore  README.md  file_utils.rkt  main.rkt  parse_utils.rkt  rand_sexp_test.rkt
test-cases/: rhombus-tests.rhm  rhombus-tests.rhm~
test_framework/: examples.rkt  file_utils.rkt  main.rkt  sexp_generator.rkt  shrubbery_parse.rkt
(+464 files in other folders)
